--- a/image/cli/mascli/templates/gitops/bootstrap/argocd.yaml
+++ b/image/cli/mascli/templates/gitops/bootstrap/argocd.yaml
@@ -150,42 +150,20 @@ spec:
           hs.message = ""
           return hs
 
-      apps.mas.ibm.com/AIServiceTenant:
-        health.lua: |
-          hs = {}
-          if obj.status ~= nil then
-            if obj.status.conditions ~= nil then
-              for i, condition in ipairs(obj.status.conditions) do
-                if condition.type == "Failure" and condition.status == "True" then
-                  hs.status = "Degraded"
-                  hs.message = condition.message
-                  return hs
-                end
-                if condition.type == "Successful" and condition.status == "True" then
-                  hs.status = "Healthy"
-                  hs.message = condition.message
-                  return hs
-                end
-              end
-            end
-          end
-          hs.status = "Progressing"
-          hs.message = ""
-          return hs
-
+      
       datasciencecluster.opendatahub.io/DataScienceCluster:
         health.lua: |
           hs = {}
           if obj.status ~= nil then
             if obj.status.conditions ~= nil then
               for i, condition in ipairs(obj.status.conditions) do
-                if (condition.type == "Ready" or condition.type == "kserveReady" or condition.type == "Available") and condition.status == "True" then
-                  hs.status = "Healthy"
+                if condition.type == "Degraded" and condition.status == "True" then
+                  hs.status = "Degraded"
                   hs.message = condition.message
                   return hs
                 end
-                if condition.type == "Degraded" and condition.status == "True" then
-                  hs.status = "Degraded"
+                if condition.type == "Ready" and condition.status == "True" then
+                  hs.status = "Healthy"
                   hs.message = condition.message
                   return hs
                 end
@@ -203,16 +181,15 @@ spec:
           if obj.status ~= nil then
             if obj.status.conditions ~= nil then
               for i, condition in ipairs(obj.status.conditions) do
-                if condition.type == "Ready" then
-                  if condition.status == "True" then
-                    hs.status = "Healthy"
-                    hs.message = condition.message
-                    return hs
-                  elseif condition.status == "false" then
-                    hs.status = "Degraded"
-                    hs.message = condition.message
-                    return hs
-                  end
+                if condition.type == "Failure" and condition.status == "True" then
+                  hs.status = "Degraded"
+                  hs.message = condition.message
+                  return hs
+                end
+                if condition.type == "Ready" and condition.status == "True" then
+                  hs.status = "Healthy"
+                  hs.message = condition.message
+                  return hs
                 end
               end
             end
@@ -220,30 +197,26 @@ spec:
           hs.status = "Progressing"
           hs.message = ""
           return hs  
-
-      apps.mas.ibm.com/AIServiceApp:
-        health.lua: |
-          hs = {}
-          if obj.status ~= nil then
-            if obj.status.conditions ~= nil then
-              for i, condition in ipairs(obj.status.conditions) do
-                if condition.type == "Failure" and condition.status == "True" then
-                  hs.status = "Degraded"
-                  hs.message = condition.message
-                  return hs
-                end
-                if (condition.type == "Successful"  or condition.type == "Ready" ) and condition.status == "True" then
-                  hs.status = "Healthy"
-                  hs.message = condition.message
-                  return hs
-                end
-                
-              end
-            end
-          end
-          hs.status = "Progressing"
-          hs.message = ""
-          return hs
+    
+      # dscinitialization.opendatahub.io/DSCInitialization:
+      #   health.lua: |
+      #     hs = {}
+      #     if obj.status ~= nil then
+      #       if obj.status.phase ~= nil then
+      #         if obj.status.phase == "Ready" then
+      #           hs.status = "Healthy"
+      #           hs.message = "DSCInitialization instance is ready"
+      #           return hs
+      #         else
+      #           hs.status = "Progressing"
+      #           hs.message = "DSCInitialization instance is not ready yet"
+      #           return hs
+      #         end
+      #       end
+      #     end
+      #     hs.status = "Unknown"
+      #     hs.message = "Status phase not found"
+      #     return hs
 
       apps.mas.ibm.com/AssistWorkspace:
         health.lua: |
