--- a/image/cli/mascli/templates/gitops/bootstrap/argocd.yaml
+++ b/image/cli/mascli/templates/gitops/bootstrap/argocd.yaml
@@ -181,15 +181,16 @@ spec:
           if obj.status ~= nil then
             if obj.status.conditions ~= nil then
               for i, condition in ipairs(obj.status.conditions) do
-                if condition.type == "Failure" and condition.status == "True" then
-                  hs.status = "Degraded"
-                  hs.message = condition.message
-                  return hs
-                end
-                if condition.type == "Ready" and condition.status == "True" then
-                  hs.status = "Healthy"
-                  hs.message = condition.message
-                  return hs
+                if condition.type == "Ready" then
+                  if condition.status == "True" then
+                    hs.status = "Healthy"
+                    hs.message = condition.message
+                    return hs
+                  elseif condition.status == "false" then
+                    hs.status = "Degraded"
+                    hs.message = condition.message
+                    return hs
+                  end
                 end
               end
             end
@@ -197,7 +198,7 @@ spec:
           hs.status = "Progressing"
           hs.message = ""
           return hs  
-          
+
       apps.mas.ibm.com/AssistWorkspace:
         health.lua: |
           hs = {}
