--- a/tekton/generate-tekton-tasks.yml
+++ b/tekton/generate-tekton-tasks.yml
@@ -239,11 +239,5 @@
         - gitops-suite-watson-studio-config
         - gitops-suite-workspace
         - gitops-suite
-        - gitops-odh
-        - gitops-deprovision-odh
-
-        - gitops-aiservice
-        - gitops-aiservice-tenant
-        - gitops-deprovision-aiservice-tenant
-        - gitops-deprovision-aiservice
-
+        - gitops-aibroker-tenant.yml.j2
+        - gitops-aibroker.yml.j2
