--- a/tekton/generate-tekton-pipelines.yml
+++ b/tekton/generate-tekton-pipelines.yml
@@ -92,7 +92,7 @@
         - gitops-mas-deps
         - gitops-mas-initiator
         - gitops-mas-aibroker
-        - gitops-mas-aibroker-tenant.yml.j2
+        - gitops-mas-aibroker-tenant
 
     # 4. Generate Gitops Pipelines with waits
     # -------------------------------------------------------------------------
