runAsNonRoot: true added

--- a/image/cli/mascli/templates/gitops/bootstrap/argocd.yaml
+++ b/image/cli/mascli/templates/gitops/bootstrap/argocd.yaml
@@ -1599,6 +1599,7 @@ spec:
         name: avp
         resources: {}
         securityContext:
+          runAsNonRoot: true
           allowPrivilegeEscalation: false
           runAsUser: 999
         volumeMounts:
