Gitops aibroker cli deprovision . (#1686)
Co-authored-by: Hardik-Prajapati <hardik.prajapati@ibm.com>
Co-authored-by: yogeshkumar <prajapati.yogeshkumar@ibm.com>
Co-authored-by: Drashti-Malviya <Drashti.Malviya@ibm.com>

--- a/tekton/generate-tekton-pipelines.yml
+++ b/tekton/generate-tekton-pipelines.yml
@@ -93,6 +93,8 @@
         - gitops-mas-initiator
         - gitops-mas-aibroker
         - gitops-mas-aibroker-tenant
+        - deprovision-mas-aibroker
+        - deprovision-mas-aibroker-tenant
 
     # 4. Generate Gitops Pipelines with waits
     # -------------------------------------------------------------------------
