--- a/tekton/generate-tekton-pipelines.yml
+++ b/tekton/generate-tekton-pipelines.yml
@@ -110,6 +110,7 @@
         - provision-bootstrap-cluster
         - deprovision-cluster
         - deprovision-mas-deps
+        - deprovision-aiservice-deps
 
     # 5. Generate Gitops Pipelines with waits
     # -------------------------------------------------------------------------
@@ -122,5 +123,6 @@
       with_items:
         - gitops-mas-deps
         - gitops-mas-initiator
+        - gitops-aiservice-deps
 
         
