--- a/image/cli/masfvt/fvt-facilities.yml
+++ b/image/cli/masfvt/fvt-facilities.yml
@@ -34,7 +34,7 @@
           - "fvt_artifactory_username .......... {{ fvt_artifactory_username }}"
           - "fvt_artifactory_token ............. {{ fvt_artifactory_token }}"
           - "fvt_digest_ctf .................... {{ fvt_digest_ctf }}"
-          - "fvt_digest_facilities ................ {{ fvt_digest_facilities }}"
+          - "fvt_digest_facilities ............. {{ fvt_digest_facilities }}"
           - "ivt_digest_core ................... {{ ivt_digest_core }}"
 
     - name: "Start fvt-facilities pipeline"
