[patch] Facilities FVT Tests onboard (#1935)
Co-authored-by: Prashant Patel <Prashant.Patel1@ibm.com>
Co-authored-by: terc1997 <64480693+terc1997@users.noreply.github.com>

--- a/tekton/generate-tekton-pipelines.yml
+++ b/tekton/generate-tekton-pipelines.yml
@@ -52,6 +52,7 @@
         - mas-fvt-visualinspection
         - mas-fvt-launcher
         - mas-ivt-manage
+        - mas-fvt-facilities
         # AI Service Pipelines
         - aiservice-install
         - aiservice-upgrade
