created seperate task for each component

--- a/tekton/generate-tekton-tasks.yml
+++ b/tekton/generate-tekton-tasks.yml
@@ -256,4 +256,9 @@
         - gitops-deprovision-aiservice-tenant
         - gitops-deprovision-aiservice
         - gitops-iac-combined
+        - gitops-iac-create-branch
+        - gitops-iac-generate-common-files
+        - gitops-iac-manage-pr
+        - gitops-iac-provision-efs
+        - gitops-iac-provision-s3
 
