--- a/.github/workflows/build-cli.yml
+++ b/.github/workflows/build-cli.yml
@@ -446,10 +446,10 @@ jobs:
 
           # Re-issue the manifest under an alias where needed
           # https://github.com/docker/buildx/issues/1744#issuecomment-1896645786
-          if [[ "$GITHUB_REF" == "refs/heads/master" ]]; then
-            docker buildx imagetools create -t quay.io/ibmmas/cli:master quay.io/ibmmas/cli:${{ env.DOCKER_TAG }}
-          elif [[ "$GITHUB_EVENT_NAME" == "release" ]]; then
+          if [[ "$GITHUB_EVENT_NAME" == "release" ]]; then
             docker buildx imagetools create -t quay.io/ibmmas/cli:latest quay.io/ibmmas/cli:${{ env.DOCKER_TAG }}
+          else
+            docker buildx imagetools create -t quay.io/ibmmas/cli:${{ env.GITHUB_REF_NAME }} quay.io/ibmmas/cli:${{ env.DOCKER_TAG }}
           fi
 
 
