[minor] Add GitOps IAC automation with EFS and S3 provisioning and automated PR management (#1968)
Co-authored-by: sumit.jain6 <Ushajainmom@0525>
Co-authored-by: Sunil Kumar Singh <sksingh11@in.ibm.com>
Co-authored-by: Nikita Kumble <nikitakumble@gmail.com>

--- a/tekton/generate-tekton-pipelines.yml
+++ b/tekton/generate-tekton-pipelines.yml
@@ -99,6 +99,7 @@
         - gitops-aiservice-tenant-pipeline
         - gitops-deprovision-aiservice-pipeline
         - gitops-deprovision-aiservice-tenant-pipeline
+        - gitops-iac-pipeline
 
     # 4. Generate Gitops Pipelines with waits
     # -------------------------------------------------------------------------
