--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,12 @@
 .vscode
 *.pyc
 
-image/cli/install/mas_cli.tar.gz
-image/cli/mascli/templates/ibm-mas-tekton.yaml
+.env
+kubectl.exe
+mas.log
 
+site/
+report/
 target/
 tmp/
 
@@ -13,48 +16,43 @@ tekton/target
 tekton/tmp
 
 image/cli/tmp-*
-
+image/cli/install/mas_cli.tar.gz
+image/cli/mascli/templates/ibm-mas-tekton.yaml
 image/cli/mascli/tmp_params
 image/cli/mascli/.env
 image/cli/mascli/working-dir
 image/cli/mascli/mas-local.sh
 image/cli/mascli/mas-local-noble.sh
+image/cli/mascli/mas-local-tgk.sh
+image/cli/mascli/mas-local-tgka.sh
 image/cli/mascli/tmp-suite
 image/cli/mascli/tmp-suite-config
-image/cli/mascli/tmp-kafka-config
-image/cli/mascli/tmp-db2u-database
 image/cli/mascli/tmp-suite-app-install
 image/cli/mascli/tmp-suite-app-config
-image/cli/mascli/mas-local-tgk.sh
-image/cli/mascli/tmp-cos-config
-image/cli/mascli/mas-local-tgka.sh
-image/cli/mascli/fyre-dev.noble3.tgka-env.sh
-image/cli/mascli/fyre-dev.noble3.tgkb-env.sh
-image/cli/mascli/gitops-mas-deploy.sh
-image/cli/mascli/gitops-mas-deploy.env.sh
-image/cli/mascli/fyre-dev.noble3.tgkc-env.sh
-image/cli/mascli/fyre-dev.noble3.tgkd-env.sh
-image/cli/mascli/gitops-mas-deploy-merged.sh
-image/cli/mascli/tmp-suite-deprovision
-image/cli/mascli/fyre-dev.noble3.tgke-env.sh
-image/cli/mascli/tmp-mas-config
-image/cli/mascli/fyre-dev.noble3.tgke-db2u-manage-env.sh
 image/cli/mascli/tmp-suite-workspace
 image/cli/mascli/tmp-suite-workspace-deprovision
-kubectl.exe
-mas.log
+image/cli/mascli/tmp-kafka-config
+image/cli/mascli/tmp-db2u-database
+image/cli/mascli/tmp-cos-config
+image/cli/mascli/tmp-suite-deprovision
+image/cli/mascli/tmp-mas-config
+image/cli/mascli/gitops-mas-deploy.sh
+image/cli/mascli/gitops-mas-deploy.env.sh
+image/cli/mascli/gitops-mas-deploy-merged.sh
+image/cli/mascli/fyre-dev.noble3.tgka-env.sh
+image/cli/mascli/fyre-dev.noble3.tgkb-env.sh
+image/cli/mascli/fyre-dev.noble3.tgkc-env.sh
+image/cli/mascli/fyre-dev.noble3.tgkd-env.sh
+image/cli/mascli/fyre-dev.noble3.tgke-env.sh
+image/cli/mascli/fyre-dev.noble3.tgke-db2u-manage-env.sh
 
+python/.venv
+python/.venv-windows
 python/pandoc-*
 python/build
 python/dist
-python/venv
 python/src/mas_cli.egg-info
 python/src/mas/cli/templates/ibm-mas-tekton.yaml
 python/src/mas/cli/templates/ibm-mas-tekton-with-digest.yaml
 python/mas-*.spec
 python/README.rst
-.env
-/.venv
-/site
-report/
-/python/.venv
