[patch] Auto-generate catalog docs from mas-devops metadata

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -81,6 +81,7 @@ markdown_extensions:
 
 plugins:
   - search: {}
+  - mas_catalogs
   - redirects:
       redirect_maps:
         "guides/architecture/core.md": "https://www.ibm.com/docs/en/mas-cd/continuous-delivery?topic=reference-maximo-application-suite-core-services"
