[patch] Fix deprovision role issue

--- a/tekton/generate-tekton-tasks.yml
+++ b/tekton/generate-tekton-tasks.yml
@@ -72,6 +72,7 @@
         - mas-fvt-deprovision-cos
         - mas-fvt-deprovision-kafka
         - mas-fvt-finalize
+        - mas-fvt-pipeline-finish-and-deprovision
         - mas-fvt-iot
         - mas-fvt-manage
         - mas-fvt-mobile-testng
