--- a/tekton/generate-tekton-tasks.yml
+++ b/tekton/generate-tekton-tasks.yml
@@ -105,6 +105,7 @@
         - mas-launchfvt-finally
         - mas-launchfvt-iot
         - mas-launchfvt-manage
+        - mas-launchfvt-manage-ai
         - mas-launchfvt-manage-is
         - mas-launchfvt-mobile
         - mas-launchfvt-monitor
