added rdsdb2 related files

--- a/tekton/generate-tekton-tasks.yml
+++ b/tekton/generate-tekton-tasks.yml
@@ -262,4 +262,5 @@
         - gitops-iac-provision-efs
         - gitops-iac-provision-s3
         - gitops-iac-provision-msk
+        - gitops-iac-provision-rdsdb2
 
