--- a/image/cli/masfvt/fvt-manage-ai.yml
+++ b/image/cli/masfvt/fvt-manage-ai.yml
@@ -9,6 +9,8 @@
     mas_instance_id: "{{ lookup('env', 'MAS_INSTANCE_ID') }}"
     mas_workspace_id: "{{ lookup('env', 'MAS_WORKSPACE_ID') }}"
     mas_appws_components: "{{ lookup('env', 'MANAGE_COMPONENTS') }}"
+    # AI Service Details
+    aiservice_instance_id: "{{ lookup('env', 'AISERVICE_INSTANCE_ID') }}"
     # FVT Configuration
     fvt_image_registry: "{{ lookup('env', 'FVT_IMAGE_REGISTRY') }}"
     fvt_artifactory_username: "{{ lookup('env', 'FVT_ARTIFACTORY_USERNAME') }}"
@@ -19,6 +21,11 @@
     pipelinerun_name: "{{ lookup('env', 'PIPELINERUN_NAME') | default('mas-fvt-manage-ai', True) }}-{{ devops_build_number }}"
     pipelinerun_namespace: "{{ lookup('env', 'PIPELINERUN_NAMESPACE') | default('mas-' ~ mas_instance_id ~ '-pipelines', True) }}"
   tasks:
+    - name: "Validate AI Service Instance ID"
+      fail:
+        msg: "AISERVICE_INSTANCE_ID is required for Manage AI FVT tests but was not provided"
+      when: aiservice_instance_id is not defined or aiservice_instance_id == ""
+
     - name: "Debug"
       debug:
         msg:
@@ -29,6 +36,7 @@
           - "mas_instance_id ................. {{ mas_instance_id }}"
           - "mas_workspace_id ................ {{ mas_workspace_id }}"
           - "mas_appws_components ............ {{ mas_appws_components }}"
+          - "aiservice_instance_id ........... {{ aiservice_instance_id }}"
           - ""
           - "fvt_image_registry .............. {{ fvt_image_registry }}"
           - "fvt_artifactory_username ........ {{ fvt_artifactory_username }}"
