--- a/tekton/generate-tekton-tasks.yml
+++ b/tekton/generate-tekton-tasks.yml
@@ -262,5 +262,5 @@
         - gitops-iac-provision-efs
         - gitops-iac-provision-s3
         - gitops-iac-provision-msk
-        - gitops-rds-db2-database.yml
+        - gitops-rds-db2-database
 
