[minor] Add mas backup option

--- a/tekton/generate-tekton-pipelines.yml
+++ b/tekton/generate-tekton-pipelines.yml
@@ -28,6 +28,7 @@
         dest: "{{ pipeline_target_dir }}/{{ item }}.yaml"
       with_items:
         # MAS Pipelines
+        - mas-backup
         - mas-install
         - mas-update
         - mas-upgrade
