--- a/tekton/generate-tekton-tasks.yml
+++ b/tekton/generate-tekton-tasks.yml
@@ -52,6 +52,7 @@
         - minio
         - aiservice
         - odh
+        - rhoai
         - aiservice-upgrade
 
     # 4. Generate Tasks (FVT)
