--- a/tekton/generate-tekton-pipelines.yml
+++ b/tekton/generate-tekton-pipelines.yml
@@ -29,6 +29,7 @@
       with_items:
         # MAS Pipelines
         - mas-backup
+        - mas-restore
         - mas-install
         - mas-update
         - mas-upgrade
