[patch] Fix the minimal install RBAC

--- a/rbac/install/namespaces.yaml
+++ b/rbac/install/namespaces.yaml
@@ -38,3 +38,8 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: redhat-marketplace
+---
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: openshift-pipelines
