--- a/rbac/install/pipeline/mas-x-core.yaml
+++ b/rbac/install/pipeline/mas-x-core.yaml
@@ -44,8 +44,8 @@ rules:
       - configmaps
       - secrets
     verbs:
-      - create
       - get
+      - create
       - patch
 
   - apiGroups:
@@ -54,6 +54,7 @@ rules:
       - suites
       - workspaces
     verbs:
+      - get
       - create
       - patch
 
@@ -66,5 +67,6 @@ rules:
       - slscfgs
       - bascfgs
     verbs:
+      - get
       - create
       - patch
