--- a/tekton/generate-tekton-tasks.yml
+++ b/tekton/generate-tekton-tasks.yml
@@ -143,6 +143,7 @@
         - suite-app-upgrade
         - suite-app-rollback
         - suite-backup
+        - suite-restore
         - suite-certs
         - suite-config
         - suite-db2-setup-for-manage
@@ -154,6 +155,7 @@
         - suite-upgrade
         - suite-verify
         - upload-backup-archive
+        - download-backup-archive
 
     # 7. Generate Tasks (OCP)
     # -------------------------------------------------------------------------
