[minor] Add in DB2 RDS post provisioning tasks for gitops (#2019)

--- a/tekton/generate-tekton-tasks.yml
+++ b/tekton/generate-tekton-tasks.yml
@@ -263,4 +263,5 @@
         - gitops-iac-provision-efs
         - gitops-iac-provision-s3
         - gitops-iac-provision-msk
+        - gitops-rds-db2-database
 
