--- a/tekton/generate-tekton-tasks.yml
+++ b/tekton/generate-tekton-tasks.yml
@@ -264,4 +264,5 @@
         - gitops-iac-provision-s3
         - gitops-iac-provision-msk
         - gitops-rds-db2-database
+        - gitops-iac-provision-rdsdb2
 
