--- a/.github/workflows/build-cli.yml
+++ b/.github/workflows/build-cli.yml
@@ -211,13 +211,10 @@ jobs:
           name: mas_cli.tar.gz
           path: ${{ github.workspace }}/image/cli/install/
 
-      - name: Install latest docker buildx
-        run: |
-          mkdir -p ~/.docker/cli-plugins
-          curl -sSL https://github.com/docker/buildx/releases/download/v0.15.1/buildx-v0.15.1.linux-amd64 \
-            -o ~/.docker/cli-plugins/docker-buildx
-          chmod +x ~/.docker/cli-plugins/docker-buildx
-
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        with:
+          version: latest
 
       # 3. CLI Container Images
       # -------------------------------------------------------------------------------------------
@@ -283,6 +280,11 @@ jobs:
           name: mas_cli.tar.gz
           path: ${{ github.workspace }}/image/cli/install/
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        with:
+          version: latest
+
       # 3. CLI Container Images
       # -------------------------------------------------------------------------------------------
       - name: Build the container image
@@ -345,6 +347,11 @@ jobs:
         with:
           name: mas_cli.tar.gz
           path: ${{ github.workspace }}/image/cli/install/
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        with:
+          version: latest
 
       # 3. CLI Container Images
       # -------------------------------------------------------------------------------------------
@@ -409,6 +416,11 @@ jobs:
           name: mas_cli.tar.gz
           path: ${{ github.workspace }}/image/cli/install/
 
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        with:
+          version: latest
+
       # 3. CLI Container Images
       # -------------------------------------------------------------------------------------------
       - name: Build the container image
@@ -453,6 +465,11 @@ jobs:
           chmod u+x $GITHUB_WORKSPACE/build/bin/*.sh
           $GITHUB_WORKSPACE/build/bin/initbuild.sh
           source $GITHUB_WORKSPACE/build/bin/.functions.sh
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        with:
+          version: latest
 
       - name: Publish the manifest
         run: |
