--- a/.github/workflows/build-cli.yml
+++ b/.github/workflows/build-cli.yml
@@ -103,6 +103,8 @@ jobs:
           sed -i "s#self.version = \"100.0.0-pre.local\"#self.version = \"${{ env.VERSION }}\"#g" ${GITHUB_WORKSPACE}/python/src/mas/cli/cli.py
           cat ${GITHUB_WORKSPACE}/python/src/mas/cli/__init__.py
 
+          cat ${GITHUB_WORKSPACE}/python/src/mas/cli/cli.py
+
           python -m pip install --upgrade pip
           pip install .[dev]
 
