--- a/.github/workflows/build-cli.yml
+++ b/.github/workflows/build-cli.yml
@@ -100,8 +100,11 @@ jobs:
         run: |
           cd $GITHUB_WORKSPACE/python
           sed -i "s#__version__ = \"100.0.0\"#__version__ = \"${{ env.VERSION_NOPREREL }}\"#g" ${GITHUB_WORKSPACE}/python/src/mas/cli/__init__.py
-          sed -i "s#self.version = \"100.0.0-pre.local\"#self.version = \"${{ env.VERSION }}\"#g" ${GITHUB_WORKSPACE}/python/src/mas/cli/cli.py
+          sed -i "s#self.version: str = \"100.0.0-pre.local\"#self.version: str = \"${{ env.VERSION }}\"#g" ${GITHUB_WORKSPACE}/python/src/mas/cli/cli.py
           cat ${GITHUB_WORKSPACE}/python/src/mas/cli/__init__.py
+
+          cat ${GITHUB_WORKSPACE}/python/src/mas/cli/cli.py | grep "self.version"
+
 
           python -m pip install --upgrade pip
           pip install .[dev]
